# fivetales

./: README.md  pdf-export.py
data/: umls_definitions.csv  umls_definitions.json  umls_test.py
docs/: Literacy-Research.md  languages.md  project-scope.md
pipeline/: .env.example  .gitignore  PIPELINE.md  pyproject.toml
pipeline/baseline/: run_baseline.py
pipeline/prompts/: exemplars.json
pipeline/src/fivetales/: config.py  llm_client.py  nlm_client.py  pipeline.py  prompt.py  schema.py
pipeline/tests/: conftest.py  test_nlm_client.py  test_pipeline.py  test_prompt.py  test_schema.py
